--- a/.air.toml
+++ b/.air.toml
@@ -13,7 +13,7 @@ bin = "./tmp/main"
 # Watch these file extensions
 include_ext = ["go", "tpl", "tmpl", "html"]
 # Ignore these directories
-exclude_dir = ["tmp", "vendor", "files"]
+exclude_dir = ["tmp", "vendor", "files", "migrations"]
 # Log file for air's output
 log = "air.log"
 # Delay in milliseconds before restarting
